--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 interface Props {
-	title: string;
+	title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
@@ -39,7 +39,8 @@ const { title } = Astro.props;
 		background-size: 224px;
 	}
 	code {
-		font-family:Menlo,
+		font-family:
+			Menlo,
 			Monaco,
 			Lucida Console,
 			Liberation Mono,
