--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ interface Props {
 	body: string
 	href: string
 	time: string
-	tags: string
+	tags: string[]
 }
 
 const { href, title, body, time, tags } = Astro.props
@@ -32,11 +32,13 @@ const { href, title, body, time, tags } = Astro.props
 		<p class="mt-0.5 text-lg font-small text-gray-900">{body}</p>
 
 		<div class="mt-4 flex flex-wrap gap-1">
-			<span
-				class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600"
-			>
-				{tags}
-			</span>
+			{
+				tags.map((tag) => (
+					<span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">
+						{tag}
+					</span>
+				))
+			}
 		</div>
 	</div>
 </article>
